[tool.poetry]
name = "sql_pyio"
version = "0.1.0"
description = "Apache Beam Python I/O connector for SQL data sources"
authors = ["Beam PyIO"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <3.13"
numpy = [
    {version = "1.24.4", python = "3.8"},
    {version = ">1.24.4", python = ">=3.9, <3.13"}
]
apache-beam = {version = ">=2.44.0"}
getdaft = {extras = ["sql"], version = ">=0.3.9"}

[tool.poetry.group.dev.dependencies]
pytest = ">=7.1.2,<8.0"
pytest-cov = "^5.0.0"
apache-beam = {extras = ["test"], version = ">=2.44.0"}
psycopg2-binary = {version = ">=2.9.0"}
parameterized = ">=0.9.0"

[tool.pytest.ini_options]
addopts = "-W ignore::pytest.PytestCollectionWarning"
markers = [
    "integration: marks integration tests (deselect with -m 'not integration')"
]

[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version",
]                                                    # version location
branch = "main"                                      # branch to make releases of
changelog_file = "CHANGELOG.md"                      # changelog file
build_command = "pip install poetry && poetry build" # build dists 
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
